app/assets/stylesheets/home.scss
.image1 {
height: 400px;
}

.banner-move {
  margin-top: 50px;
}

.home-page {
  // margin-top: 50px;
  // margin-bottom: 150px;
}
.home-title {
  font-size: 44px;
  color: #003366;
  font-family:"Abel", Monaco, monospace;
  margin-bottom: 25px;
  border-bottom-style: solid;
  border-color: black;
  text-align: center;
}

.information-boxes {
  margin-top: 50px;
  margin-bottom: 60px;
}
.panel-color {
  background-color:  #CBF3BB    ;
  box-shadow: 10px 10px 10px #888888;
}

.panel-color1 {
  background-color: #CBF3BB    ;
    box-shadow: 10px 10px 10px #888888;
}

.panel-color2 {
  background-color:#CBF3BB  ;
    box-shadow: 10px 10px 10px #888888;
}

.panel-color-body {
  background-color: #F5EFD5   ;
    box-shadow: 10px 10px 10px #888888;
}

.home-background {
  width: 100%;
  // margin-bottom: -2px;
  height: 100%;
  // background-image: -webkit-linear-gradient(bottom,#abe2c7 10%, #d6fadf 20%);
  background-color:#EEAA7B  ;
  padding-bottom:40px;
}

.first-box-padding {
  padding-bottom: 40px;
}

.first-box {
  margin-top: -10px;
  width: 100%;
  height: 300%;
  background-color:#FDF3E7;
  margin-bottom: 20px;
 }

.second-box {
  margin-top: -20px;
  background-color: #66B9BF;
  width: 100%;
  height: 100%;
}

.service-box {
  margin-bottom: 20px;
}

@media only screen and(max-width:768px) {
  .image1 {
    height:200px!important;
  }
  .typewrite {
    font-size: 20px;
    font-weight: bold;
  }
  #mobile-pic {
    margin-left:96px!important;
  }
}

